# Elephant_Vanishes

./: .gitignore  .gitmodules  CMakeLists.txt  LinkDef.h  README.md  gen_dict.sh  setup.py
dict/: LinkDef.h
inc/: CLI11.h  PROCNP.h  PROMCMC.h  PROcess.h  PROcess_weights.h  PROchi.h  PROconfig.h  PROcovariancegen.h  PROcreate.h  PROdata.h  PROfitter.h  PROlog.h  PROmetric.h  PROmodel.h  PROpeller.h  PROpoisson.h  PROsc.h  PROseed.h  PROserial.h  PROspec.h  PROsurf.h  PROsyst.h  PROtocall.h
other/: genie_reweights.root  testStreamerInfo.c
plotting_routines/: PROfit_Contour_plotter.ipynb  README.md  SBN_5.8e20_systs_SBND_ICARUS_nueapp_only.txt  test_full_grid.txt
profit/: PROfit.py  PROsurf.py  __init__.py  lib.py  log.py  process.py  pylib.py  xml.py  xmlmaker.py
pybind/: profit.cxx
pylib/: profit.cxx
src/: CMakeLists.txt  PROCNP.cxx  PROcess.cxx  PROcess_weights.cxx  PROcess_weights.h  PROchi.cxx  PROconfig.cxx  PROcovariancegen.cxx  PROcreate.cxx  PROdata.cxx  PROfitter.cxx  PROmfa.cxx  PROpeller.cxx  PROpoisson.cxx  PROspec.cxx  PROsurf.cxx  PROsyst.cxx  PROtocall.cxx
xml/: Fake2Det_test_Feb25.xml  ICARUS_run2_numudis.xml  ICARUS_run2_numudis_Mar27_2025.xml  PROxml.xml  PROxml_CAFAna.xml  PROxml_Cosmics.xml  PROxml_nosyst.xml  PROxml_plottest.xml  SBND_test_Feb25.xml
